# backend

./: .env.dev.template  .env.docker.template  .env.template  .gitignore  CHANGELOG.md  Cargo.toml  README.md  diesel.toml  docker-compose.yaml  flake.nix  rust-toolchain.toml  server-openapi.yaml
.github/: copilot-instructions.md
.github/actions/cargo-build-release/: action.yml
.github/actions/cargo-check/: action.yml
.github/actions/cargo-clippy/: action.yml
.github/actions/cargo-fmt/: action.yml
.github/workflows/: partial-build.yml  pr-check.yml  release.yml
.github/workflows/rust-actions/cargo-check/: action.yml
.github/workflows/rust-actions/cargo-clippy/: action.yml
.github/workflows/rust-actions/cargo-fmt/: action.yml
db/: docker-compose.yaml
migrations/2025-10-20-135402_inital_schema/: down.sql  up.sql
migrations/2025-10-20-142147_fill_devices/: down.sql  up.sql
src/: main.rs  models.rs  operation.rs  schema.rs
src/api/: cbor.rs  mod.rs  rest.rs
src/api/cbor/: cose_handler.rs  mod.rs  operation_handler.rs
src/api/cbor/codec/: cose.rs  mod.rs  operation.rs
src/api/cbor/codec/crypto/: crypto_aes.rs  crypto_ascon.rs  mod.rs
src/api/cbor/codec/operation/: device_info.rs  firmware.rs  mod.rs  operation_error.rs  parameter.rs
src/api/rest/: device.rs  device_key.rs  device_type.rs  device_type_firmware.rs  error.rs  firmware.rs  mod.rs  serde_helpers.rs
src/codec/: cose.rs  mod.rs  operation.rs
src/cose/: crypto_ascon.rs  mod.rs
src/crypto/: crypto_aes.rs  mod.rs
src/db/: models.rs  schema.rs
