[package]
name = "firmups-backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version="0.8.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["uuid"] }
diesel-async = { version = "0.7", features = ["postgres", "bb8", "migrations"] }
dotenvy = "0.15"
log = "0.4.28"
env_logger = "0.11.8"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
minicbor = "2.1.3"
aes-gcm = "0.10.3"
ascon-aead128 = "0.1.0-rc.2"
getrandom = "0.3.4"
