[package]
name = "firmups-backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version="0.8.6", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.2", features = ["uuid", "chrono"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel-async = { version = "0.7", features = ["postgres", "bb8", "migrations"] }
dotenvy = "0.15"
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
minicbor = { version = "2.1.3", features = ["std"] }
aes-gcm = "0.10.3"
ascon-aead128 = "0.1.0-rc.2"
getrandom = "0.3.4"
chrono = { version = "0.4.42", features = ["serde"] }
tokio-util = { version = "0.7.17", features = ["io"] }
sha2 = "0.10.9"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
base64 = "0.22.1"
thiserror = "2.0.17"
zeroize = "1.8.2"
